# mflowgen

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile.in  README.md  adks  configure  configure.ac  configure.py  ctx.m4  designs  main.py  nodes  pyproject.toml  setup-adk.mk  setup-design.mk  setup-flow.mk  setup.py  steps
.github/workflows/: pytest-ci.yml
adks/freepdk-45nm/: README.md  configure.yaml  configure.yml
adks/skywater-130nm/: README.md  configure.yml
app/: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  convert-exe-to-vmh.py
app/common/: common-bthread.c  common-bthread.h  common-misc.h  common-wprint-ex.c  common-wprint.c  common-wprint.h  common.ac  common.h  common.mk.in  crt0.S
app/mtbmark/: cilk-cilksort.cc  cilk-matmul.cc  mtbmark-bin-search-KeyValue.h  mtbmark-bin-search.cc  mtbmark-bsearch.c  mtbmark-cmult.c  mtbmark-fib.c  mtbmark-mfilt.c  mtbmark-shellsort.c  mtbmark-sort-v1.c  mtbmark-sort-v2.c  mtbmark-sort-v3.c  mtbmark-sort.c  mtbmark-stdtest.c  mtbmark-vvadd.c  mtbmark-vvamoadd.c  mtbmark-vvamoparalleladd.cc  mtbmark-vvamowsrtadd.c  mtbmark.ac  mtbmark.mk.in
app/proj/: proj-incr-asm-impl.S  proj-incr-asm.c  proj-incr-inline-asm.c  proj-incr.c  proj.ac  proj.mk.in
app/scripts/: objdump2vmh-cache.py  objdump2vmh.py  tinyrv2.ld
app/ubmark/: ubmark-bsearch.c  ubmark-cmult.c  ubmark-mfilt.c  ubmark-null-xcel.c  ubmark-quicksort-v1.c  ubmark-quicksort-v2.c  ubmark-quicksort-v3.c  ubmark-sort-xcel.c  ubmark-vvadd-xcel-strip.c  ubmark-vvadd-xcel.c  ubmark-vvadd.c  ubmark.ac  ubmark.mk.in
app/wsrt/: stdx-PreprocessorUtils.h  stdx-PreprocessorUtils.inl  wsrt-Macros.h  wsrt-Macros.inl  wsrt-Runtime.cc  wsrt-Runtime.h  wsrt-Task.h  wsrt-Task.inl  wsrt-TaskGroup.cc  wsrt-TaskGroup.h  wsrt-WSDeque.h  wsrt-WSDeque.inl  wsrt-WorkStealing.cc  wsrt-WorkStealing.h  wsrt-def.h  wsrt.ac  wsrt.h  wsrt.mk.in  wsrt.pc.in
asic-dse/: Makefile.in  Makefrag  configure
asic-dse/custom-flows/: README.md
asic-dse/rtl-handoff/: GcdUnitChip.v  GcdUnitHost.v  HostAerodactyl.v  HostButterfree.instructions.txt  HostButterfree.swshim.v  HostButterfree.v  HostButterfree_blackbox.v  HostChansey.swshim.old.v  HostChansey.swshim.v  HostChansey_blackbox.old.v  HostChansey_blackbox.v  HostGcdUnit.swshim.v  HostGcdUnit.v  IntDivRem4.v  IntMulDivUnit.v  ProcL0Mdu.v  brgtc2-chip.swshim.v  brgtc2-chip.v  brgtc2-tapein1.v  pll-ro.v  pll.v  top.v
asic-dse/steps/: README.md
asic-dse/utils/: graph.py
custom-flows/: README.md  generate-custom-flow.py
custom-flows/180nm-pcosync-chip/: Makefrag  setup-adk.mk  setup-design.mk
custom-flows/28nm-HostGcdUnit-chip/: setup-design.mk
custom-flows/28nm-brgtc2-tapein-ka429/: setup-design.mk  setup-flow.mk
custom-flows/28nm-brgtc2-tapein1/: Makefrag  setup-adk.mk  setup-design.mk
custom-flows/28nm-brgtc2-tapein2/: setup-design.mk
custom-flows/28nm-brgtc2-tapein3/: setup-design.mk  setup-flow.mk
custom-flows/28nm-brgtc2-tapein4/: Makefrag  setup-design.mk
custom-flows/28nm-gcd-chip/: Makefrag  setup-design.mk
custom-flows/28nm-pll/: setup-design.mk
custom-flows/28nm-pll-ro/: setup-design.mk  setup-flow.mk
custom-flows/28nm-rgals/: Makefrag  setup-design.mk
custom-flows/28nm-sram/: Makefrag  setup-design.mk
custom-flows/example/: setup-adk.mk  setup-design.mk
custom-flows/operator/: setup-design.mk  setup-flow.mk
custom-flows/pcosync/: setup-adk.mk  setup-design.mk  setup-flow.mk
custom-flows/pcosync-noio/: setup-design.mk
custom-flows/template-28nm/: setup-design.mk
default-flow/: setup-design.mk  setup-flow.mk
designs/: .pymtl-python-path
designs/ChecksumRTL/: flow-open.py
designs/GcdUnit/: .mflow.yml  .mflowgen.yml  construct-commercial-full.py  construct-commercial.py  construct-open-2.py  construct-open.py  construct-openroad.py  flow-commercial.py  flow-open.py  setup_graph.py
designs/ProcCksumRTL/: flow-commercial.py  flow-open.py
designs/ProcNullRTL/: flow-open.py
designs/example-pbj/: construct.py  setup_graph.py
designs/example-sumofproducts/: setup_graph.py
designs/ibex/: construct-open.py
designs/test/: TestMemory.py  __init__.py
docs/: api-edge.rst  api-graph.rst  api-node.rst  api-step.rst  conf.py  faq.rst  index.rst  motivation.rst  quick-start.rst  ref-command-line-interface.rst  ref-graph-building-api.rst  requirements.txt  stdlib-dc-synthesis.rst  stdlib-freepdk45.rst  stdlib-innovus-cts.rst  stdlib-innovus-floorplan.rst  stdlib-innovus-flowsetup.rst  stdlib-innovus-place.rst  stdlib-innovus-power.rst  stdlib-innovus-signoff.rst  stdlib-innovus-submodularization.rst  stdlib-mentor-drc.rst  stdlib-mentor-lvs.rst  stdlib-nodes.rst  stdlib-openroad.rst  stdlib-orfs-mflowgen.rst  stdlib-pipe-cleaners.rst  stdlib-submodular-nodes.rst  stdlib.rst  ug-adk-paths.rst  ug-assertions.rst  ug-cli.rst  ug-clone-node.rst  ug-clone-step.rst  ug-connect.rst  ug-mock.rst  ug-param-space.rst  ug-params.rst  ug-stash.rst  ug-static-check.rst  (+1 more)
docs/source/: conf.py  index.rst  test.md
mflow/: BuildOrchestrator.py  MakeBackend.py  NinjaBackend.py  makefile_syntax.py  ninja_syntax_extra.py  utils.py
mflow/components/: Graph.py  Step.py  __init__.py
mflowgen/: BuildOrchestrator.py  MakeBackend.py  NinjaBackend.py  StashHandler.py  __init__.py  __main__.py  cli.py  makefile_syntax.py  mflowgen_python.py  ninja_syntax.py  ninja_syntax_extra.py  utils.py
mflowgen/assertions/: File.py  Tool.py  __init__.py  (+3 more)
parser-scripts/: parse-connectivity.py
pymtl/: conftest.py  fpga  fpga-design  pytest.ini
requirements/: ci.txt  dev.txt
steps/: README.md
utils/: cksum.lyp  graph  graph.py  info  info.py  letters  letters.py  nconfigure  runtimes  runtimes.py  status  status.py
(+1658 files in other folders)
